jumbotron and fetch setup

--- a/views/RandomPic.ejs
+++ b/views/RandomPic.ejs
@@ -9,17 +9,22 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
      <link rel="stylesheet" type="text/css" href="Public/style.css">
 
-    <title>Hello, world!</title>
+    <title>Random Picture </title>
   </head>
   <body>
   
      <!--Jumbotron-->
     <div class="jumbotron bg-dark text-white"">
-        <h1 class="display-4"> Welcome!</h1>
+        <h1 class="display-4"> Random Dog Photo</h1>
         <p class="lead"></p>
         <hr class="my-4">
+        <p>Please enjoy the random dog photo generated for you.</p>
     </div> 
 
+
+    <!-- displaying image-->
+
+     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
