--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -9,15 +9,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
      <link rel="stylesheet" type="text/css" href="Public/style.css">
 
-    <title>Hello, world!</title>
+    <title>Planet Canine</title>
   </head>
   <body>
   
      <!--Jumbotron-->
     <div class="jumbotron bg-dark text-white"">
-        <h1 class="display-4"> Welcome!</h1>
-        <p class="lead"></p>
+        <h1 class="display-4">Welcome to Planet Canine!</h1>
+        <p class="lead"> Hello, and thank you for visiting our website. This website will be all about dog photos. If you visit the random page you can generate random dog photos as well as search by dog breed out our search page. Enjoy!</p>
         <hr class="my-4">
+         <p>Website Creators : Ashley Locey, Brandon Joiner, Kyle Martinolich.</p>
+         <p>Visit our Contact Us page to learn more  </p>
     </div> 
 
     <!-- Optional JavaScript -->
