Contact page edited & navbar added

--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -4,7 +4,25 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/RandomPic">Random Dog Picture</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/Contact">Contact</a>
+      </li>
+    </ul>
+  </div>
+</nav>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -31,12 +49,26 @@
     <center><div class="card mb-3" style="max-width: 540px;">
         <div class="row no-gutters">
             <div class="col-md-4">
-            <img src="img/AshleyL.jpeg" class="card-img" alt="...">
+            <img src="AshleyL.jpeg" class="card-img" alt="...">
             </div>
             <div class="col-md-8">
             <div class="card-body">
                 <h5 class="card-title">Ashley Locey</h5>
                 <p class="card-text">Hello! My name is Ashley and I am a senior at Columbus State University. I am studying Applied Computer Science. I am a huge animal lover and I own 4 dogs and 2 turteles. Some of my hobbies are volutneering at my animal shleter, art & craft, and cooking.</p>
+            </div>
+            </div>
+        </div>
+    </div></center>
+    <!--Kody-->
+        <center><div class="card mb-3" style="max-width: 540px;">
+        <div class="row no-gutters">
+            <div class="col-md-4">
+            <img src="Kody.jpg" class="card-img" alt="...">
+            </div>
+            <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">Kody Martinolich</h5>
+                <p class="card-text">Hello! My name is Kody and I am a senior at Columbus State University. I am studying Computer Science Web Development. I have always loved animals. At one point quite some time ago, I owned a dog, 2 cats, a ferret, 2 guinea pigs, and a hamster, at the same time! My hobbies are mostly made up of playing/watching football and various other sports and video games.</p>
             </div>
             </div>
         </div>
