--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -4,7 +4,25 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/RandomPic">Random Dog Picture</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/Contact">Contact</a>
+      </li>
+    </ul>
+  </div>
+</nav>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
      <link rel="stylesheet" type="text/css" href="Public/style.css">
@@ -14,11 +32,11 @@
   <body>
   
      <!--Jumbotron-->
-    <div class="jumbotron bg-dark text-white"">
+    <div class="jumbotron bg-dark text-white">
         <h1 class="display-4">Welcome to Planet Canine!</h1>
         <p class="lead"> Hello, and thank you for visiting our website. This website will be all about dog photos. If you visit the random page you can generate random dog photos as well as search by dog breed out our search page. Enjoy!</p>
         <hr class="my-4">
-         <p>Website Creators : Ashley Locey, Brandon Joiner, Kyle Martinolich.</p>
+         <p>Website Creators : Ashley Locey, Brandon Joiner, Kody Martinolich.</p>
          <p>Visit our Contact Us page to learn more  </p>
     </div> 
 
