--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -73,7 +73,20 @@
             </div>
         </div>
     </div></center>
-
+    <!--Brandon-->
+        <center><div class="card mb-3" style="max-width: 540px;">
+        <div class="row no-gutters">
+            <div class="col-md-4">
+            <img src="BJoiner.jpg" class="card-img" alt="...">
+            </div>
+            <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">Brandon Joiner</h5>
+                <p class="card-text">Good Day! My name is Brandon and I am a senior at Columbus State University, majoring in Information Technology. I currently have three associate degrees from Columbus Technical College in Management/Supervisory Development, Computer Support Specialist and Networking Specialist. I have a dog, a Jack Russell Shih Tzu mix. In my spare time you can usually find me exercising, watching sports, cooking or playing videos.</p>
+            </div>
+            </div>
+        </div>
+    </div></center>
 
 
     <!-- Optional JavaScript -->
