--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -54,7 +54,7 @@
             <div class="col-md-8">
             <div class="card-body">
                 <h5 class="card-title">Ashley Locey</h5>
-                <p class="card-text">Hello! My name is Ashley and I am a senior at Columbus State University. I am studying Applied Computer Science. I am a huge animal lover and I own 4 dogs and 2 turteles. Some of my hobbies are volutneering at my animal shleter, art & craft, and cooking.</p>
+                <p class="card-text">Hello! My name is Ashley and I am a senior at Columbus State University. I am studying Applied Computer Science. I am a huge animal lover and I own 4 dogs and 2 turtles. Some of my hobbies are volutneering at my animal shleter, art & crafts, and cooking.</p>
             </div>
             </div>
         </div>
