added Select Breed page

--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -18,6 +18,9 @@
         <a class="nav-link" href="/RandomPic">Random Dog Picture</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/DogBreed">Select Breed</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/Contact">Contact</a>
       </li>
     </ul>
@@ -31,7 +34,7 @@
   <body>
    
     <!--Jumbotron-->
-    <div class="jumbotron bg-dark text-white"">
+    <div class="jumbotron bg-dark text-white">
         <h1 class="display-4">Contact Us</h1>
         <p class="lead"></p>
         <hr class="my-4">
