--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -40,6 +40,25 @@
          <p>Visit our Contact Us page to learn more  </p>
     </div> 
 
+
+    <!--Animal Rescues Locally-->
+    <center><div class="card mb-3" style="max-width: 540px;">
+        <div class="row no-gutters">
+            <div class="col-md-4">
+            <img src="animalsos.jpeg" class="card-img" alt="...">
+            </div>
+            <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">Animal SOS</h5>
+                <p class="card-text"> Animal SOS is a non profit in Columbus, Ga that helps, saves and rescues animals. Animal SOS always goes above and beyond to help save animals.
+                They offer several programs that includes Owner Support, WIT-Whatever It Takes, Pets Safe At Home, Spay and
+                Neuter, Saving lifes @ CACC, and the CACC Medial Fund. Thier vision is to help and and all animals that are in 
+                 any kind of need and save those from euthanasia. </p>
+            </div>
+            </div>
+        </div>
+    </div></center>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
