--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -43,16 +43,26 @@
          <p>Visit our Contact Us page to learn more  </p>
     </div> 
 
+    <!--Picture-->
+    <center><img style="width: 800px;"src="dogb.png" alt="Collage of Animals"></center>
+
+    <!--Header-->
+    <center><h1 style=" margin-top:30px; font-size:30px; width:900px; box-shadow: 3px 3px black, -1em 0 .4em grey;">Below is a list and link to local animal resuces in Columbus,Ga :</h1></center>
+    
+
 
     <!--Animal Rescues Locally-->
-    <center><div class="card mb-3" style="max-width: 540px;">
+    <center><div class="card mb-3" style="margin-top:15px; max-width: 540px;">
         <div class="row no-gutters">
             <div class="col-md-4">
-            <img src="animalsos.jpeg" class="card-img" alt="...">
+            <img style="height: 150px; margin-top:20px;" src="animalsos.jpeg" class="card-img" alt="..." >
+
+            <a href="https://www.animalsosfoundation.org" style="margin-top:40px;" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Learn More</a>
+
             </div>
             <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title">Animal SOS</h5>
+                <h5 class="card-title"><bold>Animal SOS</bold></h5>
                 <p class="card-text"> Animal SOS is a non profit in Columbus, Ga that helps, saves and rescues animals. Animal SOS always goes above and beyond to help save animals.
                 They offer several programs that includes Owner Support, WIT-Whatever It Takes, Pets Safe At Home, Spay and
                 Neuter, Saving lifes @ CACC, and the CACC Medial Fund. Thier vision is to help and and all animals that are in 
@@ -61,6 +71,25 @@
             </div>
         </div>
     </div></center>
+
+    <center><div class="card mb-3" style="margin-top:15px; max-width: 540px;">
+        <div class="row no-gutters">
+            <div class="col-md-4">
+            <img style="height: 150px; margin-top:20px;" src="paws.jpg" class="card-img" alt="..." >
+
+            <a href="https://pawshumane.org" style="margin-top:40px;" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Learn More</a>
+
+            </div>
+            <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title"><bold>Paws Humane</bold></h5>
+                <p class="card-text"> Paws Humans is a non profit in Columbus, Ga that enriches the lives of animals and the community. Paws humane is very community based as well, and they hvae alot of programs to help the community with thier animals. One of the programs include spay/neuter program. They often pull many animals from animal control to help save dogs from euthanasia. They are also the largest companion animal welfare organization in the region.</p>
+            </div>
+            </div>
+        </div>
+    </div></center>
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
