--- a/views/RandomPic.ejs
+++ b/views/RandomPic.ejs
@@ -44,7 +44,10 @@
 
         
     <!-- displaying image-->
-
+    <center><div class="card mb-3" style="margin-top:15px; max-width: 540px;">
+        <h1>Random Dog:</h1>
+ <img class="picture" src="<%= data.message %>"">
+ </div></center>
      
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
