working on contact form

--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -48,8 +48,16 @@
     </div> 
 
     <!-- insert contact form that sends to email-->
-
-
+    <center><form style="Width:800px;">
+        <div class="form-group">
+            <label for="exampleFormControlInput1">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="form-group">
+            <label for="exampleFormControlTextarea1">Message</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Enter Your Message Here"rows="3"></textarea>
+        </div>
+    </form></center>
 
 
     <!-- insert picture and infromation about us-->
