Finished Dog Breed image page

--- a/views/DogBreed.ejs
+++ b/views/DogBreed.ejs
@@ -44,7 +44,7 @@
     
     <div class="container">
         <h1>Choose Your Breed</h1>   
-        <form method='GET' action="/DogBreed">
+        <form method='POST' action="/DogBreed">
              <label for="breed">Breed</label>
                 <input type="text" id="breed" name="breed" placeholder="Specify Breed">
                 <input type="submit" value="Show Dog">
