added some styling

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--nav bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Planet Canine</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
     </button>
@@ -54,8 +54,7 @@
     <center><h1 style=" margin-top:30px; font-size:30px; width:900px; box-shadow: 3px 3px black, -1em 0 .4em grey;">Below is a list and link to local animal resuces in Columbus,Ga :</h1></center>
     
 
-
-    <!--Animal Rescues Locally-->
+    <!--Animal Rescues Local-->
     <center><div class="card mb-3" style="margin-top:15px; max-width: 540px;">
         <div class="row no-gutters">
             <div class="col-md-4">
@@ -66,7 +65,7 @@
             </div>
             <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title"><bold>Animal SOS</bold></h5>
+                <h5 style= "box-shadow: 2px 2px grey, -1em 0 .4em grey;" class="card-title"><bold>Animal SOS</bold></h5>
                 <p class="card-text"> Animal SOS is a non profit in Columbus, Ga that helps, saves and rescues animals. Animal SOS always goes above and beyond to help save animals.
                 They offer several programs that includes Owner Support, WIT-Whatever It Takes, Pets Safe At Home, Spay and
                 Neuter, Saving lifes @ CACC, and the CACC Medial Fund. Thier vision is to help and and all animals that are in 
@@ -76,7 +75,7 @@
         </div>
     </div></center>
 
-    <center><div class="card mb-3" style="margin-top:15px; max-width: 540px;">
+    <center><div class="card mb-3" style="margin-top:15px; max-width: 540px; ">
         <div class="row no-gutters">
             <div class="col-md-4">
             <img style="height: 150px; margin-top:20px;" src="paws.jpg" class="card-img" alt="..." >
@@ -86,12 +85,12 @@
             </div>
             <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title"><bold>Paws Humane</bold></h5>
+                <h5 style= "box-shadow:  2px 2px grey, -1em 0 .4em grey;" class="card-title"><bold>Paws Humane</bold></h5>
                 <p class="card-text"> Paws Humans is a non profit in Columbus, Ga that enriches the lives of animals and the community. Paws humane is very community based as well, and they hvae alot of programs to help the community with thier animals. One of the programs include spay/neuter program. They often pull many animals from animal control to help save dogs from euthanasia. They are also the largest companion animal welfare organization in the region.</p>
             </div>
             </div>
         </div>
-    </div></center>
+    </div> </center>
 
 
 
