styling & button added

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -45,10 +45,15 @@
         <hr class="my-4">
          <p>Website Creators : Ashley Locey, Brandon Joiner, Kody Martinolich.</p>
          <p>Visit our Contact Us page to learn more  </p>
+         <p>Photo Credits: Dog API</p>
     </div> 
 
     <!--Picture-->
     <center><img style="width: 800px;"src="dogb.png" alt="Collage of Animals"></center>
+
+
+    <!--random button on homepage-->
+    <center><a href="/RandomPic" style="margin-top:40px; margin-bottom:40px;" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Random</a></center>
 
     <!--Header-->
     <center><h1 style=" margin-top:30px; font-size:30px; width:900px; box-shadow: 3px 3px black, -1em 0 .4em grey;">Below is a list and link to local animal resuces in Columbus,Ga :</h1></center>
