--- a/views/DogBreed.ejs
+++ b/views/DogBreed.ejs
@@ -47,26 +47,23 @@
         <p>Please enjoy the selected dog breed photos generated for you.</p>
     </div> 
     
-    <div class="container">
+    <center><div class="container">
         <h1>Choose Your Breed</h1>   
         <form method='POST' action="/DogBreed">
              <label for="breed">Breed</label>
                 <input type="text" id="breed" name="breed" placeholder="Specify Breed">
                 <input type="submit" value="Show Dog">
         </form>
-        
     <!-- displaying image-->
-        <center><div class="card mb-3" style="margin-top:15px; max-width: 540px;">
-        <h1>Random Dog:</h1>
- <img class="picture" src="<%= data.message %>">
- <%= data.message %>
- </div></center>
-
+        <div class="card mb-3" style="margin-top:15px; max-width: 540px;">
+            <img class="picture" src="<%= data.message %>">
+        <%= data.message%>
+        </div>
         <section class="results hidden">
-          <h2>Check This Dog Out</h2>
+          <h2>Breed: </h2>
           <img class="results-img">
         </section>
-    </div>
+    </div></center>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
