--- a/views/RandomPic.ejs
+++ b/views/RandomPic.ejs
@@ -47,6 +47,10 @@
         <p>Please enjoy the random dog photo generated for you.</p>
     </div> 
 
+    <center><form action ="/addBreed" method="POST">
+        <button> Show Breed</button>
+    </form></center>
+
         
     <!-- displaying image-->
     <center><div class="card mb-3" style="margin-top:15px; max-width: 540px; border: 1px solid black;">
