contact added button

--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -57,6 +57,7 @@
             <label for="exampleFormControlTextarea1">Message</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Enter Your Message Here"rows="3"></textarea>
         </div>
+        <button>send mail</button>
     </form></center>
 
 
