adding to breed search

--- a/views/DogBreed.ejs
+++ b/views/DogBreed.ejs
@@ -55,14 +55,17 @@
                 <input type="submit" value="Show Dog">
         </form>
     <!-- displaying image-->
-        <div class="card mb-3" style="margin-top:15px; max-width: 540px;">
-            <img class="picture" src="<%= data.message %>">
-        <%= data.message%>
-        </div>
-        <section class="results hidden">
-          <h2>Breed: </h2>
-          <img class="results-img">
-        </section>
+        <img  style = " border: 3px solid black; max-height: 400px; width: 600px;"class="picture" src="<%= data.showImage %>">
+        <p>
+
+        </p>
+        <center><img style = "max-height: 400px; border: 3px solid black; width: 600px;"class="picture" src="<%= data.showImage2 %>"></center>
+        <p>
+
+        </p>
+        <img img style = " max-height: 400px; border: 3px solid black; width: 600px;" class="picture" src="<%= data.showImage3 %>">
+
+
     </div></center>
 
     <!-- Optional JavaScript -->
