fixed nav bar active state

--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -13,8 +13,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+            <a class="nav-link" href="/">Home </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/RandomPic">Random Dog Picture</a>
@@ -22,8 +22,8 @@
         <li class="nav-item">
             <a class="nav-link" href="/DogBreed">Select Breed</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/Contact">Contact</a>
+        <li class="nav-item active">
+            <a class="nav-link" href="/Contact">Contact<span class="sr-only">(current)</span></a>
         </li>
         </ul>
     </div>
@@ -37,7 +37,7 @@
   <body>
 
     <!--background color-->
-    <body style="background-color:#D7D3CB;">
+    <body style="background-image: url('stars.jpg');">
     
     <!--Jumbotron-->
     <div class="jumbotron bg-dark text-white">
