--- a/views/DogBreed.ejs
+++ b/views/DogBreed.ejs
@@ -13,14 +13,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/RandomPic">Random Dog Picture</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/DogBreed">Select Breed</a>
+        <li class="nav-item active">
+            <a class="nav-link" href="/DogBreed">Select Breed<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/Contact">Contact</a>
@@ -37,7 +37,7 @@
   <body>
 
     <!--background color-->
-    <body style="background-color:#D7D3CB;">
+     <body style="background-image: url('stars.jpg');">
   
      <!--Jumbotron-->
     <div class="jumbotron bg-dark text-white">
