--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -4,28 +4,28 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!--nav bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!--nav bar--> 
+    <nav class=" navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Planet Canine</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/RandomPic">Random Dog Picture</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/DogBreed">Select Breed</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/Contact">Contact</a>
-        </li>
-        </ul>
-    </div>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/RandomPic">Random Dog Picture</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/DogBreed">Select Breed</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/Contact">Contact</a>
+            </li>
+            </ul>
+        </div>
     </nav>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -36,7 +36,7 @@
   <body>
 
     <!--background color-->
-    <body style="background-color:#D7D3CB;">
+    <body style="background-image: url('stars.jpg');">
   
      <!--Jumbotron-->
     <div class="jumbotron bg-dark text-white">
