--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -56,11 +56,11 @@
     <center><a href="/RandomPic" style="margin-top:40px; margin-bottom:40px;" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Random</a></center>
 
     <!--Header-->
-    <center><h1 style=" margin-top:30px; font-size:30px; width:900px; box-shadow: 3px 3px black, -1em 0 .4em grey;">Below is a list and link to local animal resuces in Columbus,Ga :</h1></center>
+    <center><h1 style=" margin-top:30px; font-size:30px; width:900px; border: 4px solid black;">Below is a list and link to local animal resuces in Columbus,Ga :</h1></center>
     
 
     <!--Animal Rescues Local-->
-    <center><div class="card mb-3" style="margin-top:15px; max-width: 540px;">
+    <center><div class="card mb-3" style="margin-top:15px; max-width: 540px; border: 2px solid black;">
         <div class="row no-gutters">
             <div class="col-md-4">
             <img style="height: 150px; margin-top:20px;" src="animalsos.jpeg" class="card-img" alt="..." >
@@ -80,7 +80,7 @@
         </div>
     </div></center>
 
-    <center><div class="card mb-3" style="margin-top:15px; max-width: 540px; ">
+    <center><div class="card mb-3" style="margin-top:15px; max-width: 540px; border: 2px solid black;">
         <div class="row no-gutters">
             <div class="col-md-4">
             <img style="height: 150px; margin-top:20px;" src="paws.jpg" class="card-img" alt="..." >
