--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -58,13 +58,16 @@
             <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Enter Your Message Here"rows="3"></textarea>
         </div>
         <button>send mail</button>
+        <p>
+
+        </p>
     </form></center>
 
 
     <!-- insert picture and infromation about us-->
 
     <!--Ashley-->
-    <center><div class="card mb-3" style="max-width: 540px;">
+    <center><div class="card mb-3" style="max-width: 540px; border: 2px solid black;">
         <div class="row no-gutters">
             <div class="col-md-4">
             <img src="AshleyL.jpeg" class="card-img" alt="...">
@@ -78,7 +81,7 @@
         </div>
     </div></center>
     <!--Kody-->
-        <center><div class="card mb-3" style="max-width: 540px;">
+        <center><div class="card mb-3" style="max-width: 540px; border: 2px solid black;">
         <div class="row no-gutters">
             <div class="col-md-4">
             <img src="Kody.jpg" class="card-img" alt="...">
@@ -92,7 +95,7 @@
         </div>
     </div></center>
     <!--Brandon-->
-        <center><div class="card mb-3" style="max-width: 540px;">
+        <center><div class="card mb-3" style="max-width: 540px; border: 2px solid black;">
         <div class="row no-gutters">
             <div class="col-md-4">
             <img src="BJoiner.jpeg" class="card-img" alt="...">
