--- a/views/DogBreed.ejs
+++ b/views/DogBreed.ejs
@@ -50,7 +50,7 @@
 
     <center><div class="container">
         <h1>Choose Your Breed</h1>   
-        <form method='POST' action="/DogBreed">
+        <form method='POST' action="/DogBreed" style="font-size:20px;">
              <label for="breed">Breed</label>
                  <select id="breed" name="breed">
                         <option value="affenpinscher">affenpinscher</option>
@@ -225,6 +225,9 @@
 
         </p>
         <img img style = " max-height: 400px; border: 3px solid black; width: 600px;" class="picture" src="<%= data.showImage3 %>">
+        <p>
+
+        </p>
 
 
     </div></center>
