--- a/views/RandomPic.ejs
+++ b/views/RandomPic.ejs
@@ -48,7 +48,7 @@
     </div> 
         
     <!-- displaying image-->
-    <center><div class="card mb-3" style="margin-top:15px; max-width: 540px; border: 1px solid black;">
+    <center><div class="card mb-3" style="margin-top:15px; max-width: 540px; border: 1px solid black; padding:10px;">
         <bold><h1>Breed: </bold>  <%= data.showBreed%></h1>
         <img style=" max-width:540px; border: 3px solid black;" class="picture" src="<%= data.message %>">
     </div></center>
