--- a/views/RandomPic.ejs
+++ b/views/RandomPic.ejs
@@ -40,7 +40,8 @@
      <body style="background-image: url('stars.jpg');">
   
      <!--Jumbotron-->
-    <div class="jumbotron bg-dark text-white">
+    <div class="jumbotron bg-dark text-white" style="background-image: url('dogsrandom.jpg'); background-repeat: no-repeat;
+    background-position: center;"">
         <h1 class="display-4"> Random Dog Photo</h1>
         <p class="lead"></p>
         <hr class="my-4">
