--- a/views/DogBreed.ejs
+++ b/views/DogBreed.ejs
@@ -40,7 +40,7 @@
      <body style="background-image: url('stars.jpg');">
   
      <!--Jumbotron-->
-    <div class="jumbotron bg-dark text-white" style="background-image: url('dogcollage.jpg')">
+    <div class="jumbotron bg-dark text-white" style="background-image: url('dogcollage.jpg');  background-size: auto 100%;"">
         <h1 class="display-4"> Selected Dog Breed</h1>
         <p class="lead"></p>
         <hr class="my-4">
