--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -40,7 +40,7 @@
     <body style="background-image: url('stars.jpg');">
     
     <!--Jumbotron-->
-    <div class="jumbotron bg-white text-dark" style="background-image: url('contactdog.jpg'); background-size: auto 100%; background-repeat: no-repeat; background-position: center;">
+    <div class="jumbotron bg-dark text-white">      
         <h1 class="display-4">Contact Us</h1>
         <p class="lead"></p>
         <hr class="my-4">
