--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -39,7 +39,7 @@
     <body style="background-image: url('stars.jpg');">
   
      <!--Jumbotron-->
-    <div class="jumbotron bg-info text-white" style="background-image: url('dogearth.jpg'); background-repeat: no-repeat; background-position: center; background-size: auto 100%;"">
+     <div class="jumbotron bg-dark text-white">
         <h1 class="display-4">Welcome to Planet Canine!</h1>
         <p class="lead"> Hello, and thank you for visiting our website. This website will be all about dog photos. If you visit the random page you can generate random dog photos as well as search by dog breed out our search page. Enjoy!</p>
         <hr class="my-4">
