--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -70,7 +70,7 @@
     <center><div class="card mb-3" style="max-width: 540px; border: 2px solid black;">
         <div class="row no-gutters">
             <div class="col-md-4">
-            <img src="AshleyL.jpeg" class="card-img" alt="...">
+            <img style= "border-radius: 50%; margin-left:5px; margin-top: 20px; border: 2px solid black;"src="AshleyL.jpeg" class="card-img" alt="...">
             </div>
             <div class="col-md-8">
             <div class="card-body">
@@ -84,7 +84,7 @@
         <center><div class="card mb-3" style="max-width: 540px; border: 2px solid black;">
         <div class="row no-gutters">
             <div class="col-md-4">
-            <img src="Kody.jpg" class="card-img" alt="...">
+            <img style= "border-radius: 50%; margin-left:5px; margin-top: 20px;border: 2px solid black;"src="Kody.jpg" class="card-img" alt="...">
             </div>
             <div class="col-md-8">
             <div class="card-body">
@@ -98,7 +98,7 @@
         <center><div class="card mb-3" style="max-width: 540px; border: 2px solid black;">
         <div class="row no-gutters">
             <div class="col-md-4">
-            <img src="BJoiner.jpeg" class="card-img" alt="...">
+            <img style= " border-radius: 50%; margin-left:5px; margin-top: 20px;border: 2px solid black;"src="BJoiner.jpeg" class="card-img" alt="...">
             </div>
             <div class="col-md-8">
             <div class="card-body">
