--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -63,7 +63,7 @@
     <center><div class="card mb-3" style="margin-top:15px; max-width: 540px; border: 2px solid black;">
         <div class="row no-gutters">
             <div class="col-md-4">
-            <img style="height: 150px; margin-top:20px;" src="animalsos.jpeg" class="card-img" alt="..." >
+            <img style="border-radius: 45%; margin-left:5px; margin-top: 20px;border: 2px solid black; height: 125px; width:175px;" src="animalsos.jpeg" class="card-img" alt="..." >
 
             <a href="https://www.animalsosfoundation.org" style="margin-top:40px;" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Learn More</a>
 
@@ -83,7 +83,7 @@
     <center><div class="card mb-3" style="margin-top:15px; max-width: 540px; border: 2px solid black;">
         <div class="row no-gutters">
             <div class="col-md-4">
-            <img style="height: 150px; margin-top:20px;" src="paws.jpg" class="card-img" alt="..." >
+            <img style=" border-radius: 45%; margin-left:5px; margin-top: 20px;border: 2px solid black; height: 125px; width:175px; " src="paws.jpg" class="card-img" alt="..." >
 
             <a href="https://pawshumane.org" style="margin-top:40px;" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Learn More</a>
 
