--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -56,7 +56,7 @@
     <center><a href="/RandomPic" style="margin-top:40px; margin-bottom:40px;" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Random</a></center>
 
     <!--Header-->
-    <center><h1 style=" margin-top:30px; font-size:30px; width:900px; border: 4px solid black;">Below is a list and link to local animal resuces in Columbus,Ga :</h1></center>
+    <center><h1 style=" margin-top:30px; font-size:30px; width:900px; border: 4px solid black;">Below is a list and link to local animal rescues in Columbus,Ga :</h1></center>
     
 
     <!--Animal Rescues Local-->
